[package]
name = "pallet-encointer-ceremonies"
version = "1.1.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies]
log = { version = "0.4.14", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false }

# local deps
encointer-primitives = { path = "../primitives", default-features = false }
encointer-balances = { package = "pallet-encointer-balances", path = "../balances", default-features = false }
encointer-ceremonies-assignment = { path = "assignment", default-features = false }
encointer-communities = { package = "pallet-encointer-communities", path = "../communities", default-features = false }
encointer-scheduler = { package = "pallet-encointer-scheduler", path = "../scheduler", default-features = false }

# substrate deps
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.18" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.18" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.18" }
sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.18" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.18" }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.18" }

# benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true, branch = "polkadot-v0.9.18" }
sp-application-crypto = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true , branch = "polkadot-v0.9.18" }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true , branch = "polkadot-v0.9.18" }


[dev-dependencies]
approx = "0.5.1"
itertools = "0.10.3"
rstest = "0.12.0"
sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-keystore = { version = "0.12.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"pallet-timestamp/std",
	"encointer-balances/std",
	"encointer-ceremonies-assignment/std",
	"encointer-communities/std",
	"encointer-primitives/std",
	"encointer-scheduler/std",
	"frame-benchmarking/std",
	"sp-io/std",
	"sp-core/std",
]

runtime-benchmarks = ["frame-benchmarking", "sp-application-crypto", "sp-core"]
