[package]
name = "test-utils"
version = "1.0.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2021"

[dependencies]
log = "0.4.14"

# local deps
encointer-primitives = { path = "../primitives" }
encointer-balances = { package = "pallet-encointer-balances", path = "../balances" }
encointer-ceremonies = { package = "pallet-encointer-ceremonies", path = "../ceremonies" }
encointer-communities = { package = "pallet-encointer-communities", path = "../communities" }
encointer-scheduler = { package = "pallet-encointer-scheduler", path = "../scheduler" }

# substrate deps
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
frame-support-test = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }

# polkadot deps
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
